resolving alignment issues

--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ h1 {
     border: none;
 }
 
+.card-img-top {
+    width: 100%;
+}
+
 /*<contact me styles */
 
 
